tests/should_succeed/bug/269.rs
extern crate creusot_std;

use creusot_std::prelude::*;

#[logic(open)]
pub fn my_lemma() {}
